Finalize contact details with mailto link

--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | 1440 Advisory Group</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
     <div class="wrap">
@@ -36,7 +38,8 @@
       <li>Briefly describe the situation and why continuity or coordination risk is elevated.</li>
       <li>Confirm whether licensed medical, psychiatric, or therapeutic care is currently in place (if applicable).</li>
       <li>Clarify who holds decision authority and whether consent can be established.</li>
-      <li>Indicate the desired outcome of an initial alignment conversation (e.g., assess fit, define roles, determine next steps).</li>
+      <li>Indicate the desired outcome of an initial alignment conversation (e.g., assess fit, define roles, determine
+        next steps).</li>
     </ul>
 
     <h2>What not to send</h2>
@@ -60,8 +63,8 @@
       Add your professional email and phone here. Keep this section minimal and institution-forwardable.
     </p>
     <div class="panel">
-      <p><strong>Email:</strong> [Professional Email]</p>
-      <p><strong>Phone:</strong> [Professional Phone]</p>
+      <p><strong>Email:</strong> <a href="mailto:info@mbswellnessgroup.org">info@mbswellnessgroup.org</a></p>
+      <p><strong>Phone:</strong> Available upon request.</p>
     </div>
 
     <p class="small">
@@ -79,4 +82,5 @@
     </div>
   </footer>
 </body>
+
 </html>
