Add meta descriptions and robots tags to all pages

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | 1440 Advisory Group</title>
+  <meta name="description"
+    content="Referral-based, exploratory contact for 1440 Advisory Group. Initial outreach is scope-focused and alignment-driven." />
+  <meta name="robots" content="index,follow" />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 
