--- a/institutional-summary.html
+++ b/institutional-summary.html
@@ -1,11 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Institutional Summary | 1440 Advisory Group</title>
+  <meta name="description"
+    content="Professional overview of 1440 Advisory Group’s clinically aligned advisory, coordination, and continuity services for institutions, partners, and high-trust stakeholders." />
+  <meta name="robots" content="index,follow" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
     <div class="wrap">
@@ -87,4 +92,5 @@
     </div>
   </footer>
 </body>
+
 </html>
