--- a/scope-ethics.html
+++ b/scope-ethics.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scope & Ethics | 1440 Advisory Group</title>
+  <meta name="description"
+    content="Scope and ethics framework defining 1440 Advisory Group’s professional boundaries, responsibilities, consent practices, and relationship to licensed clinical care." />
+  <meta name="robots" content="index,follow" />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
     <div class="wrap">
@@ -101,4 +107,5 @@
     </div>
   </footer>
 </body>
+
 </html>
